extends Node

func init(list):
	$lab1.text = list[0] if list.size() >= 1 else ""
	$lab20.text = list[1] if list.size() >= 2 else ""
	$lab19.text = list[2] if list.size() >= 3 else ""
	$lab18.text = list[3] if list.size() >= 4 else ""
	$lab17.text = list[4] if list.size() >= 5 else ""
	$lab16.text = list[5] if list.size() >= 6 else ""
	$lab15.text = list[6] if list.size() >= 7 else ""
	$lab14.text = list[7] if list.size() >= 8 else ""
	$lab13.text = list[8] if list.size() >= 9 else ""
	$lab12.text = list[9] if list.size() >= 10 else ""
	$lab11.text = list[10] if list.size() >= 11 else ""
	$lab10.text = list[11] if list.size() >= 12 else ""
	$lab9.text = list[12] if list.size() >= 13 else ""
	$lab8.text = list[13] if list.size() >= 14 else ""
	$lab7.text = list[14] if list.size() >= 15 else ""
	$lab6.text = list[15] if list.size() >= 16 else ""
	$lab5.text = list[16] if list.size() >= 17 else ""
	$lab4.text = list[17] if list.size() >= 18 else ""
	$lab3.text = list[18] if list.size() >= 19 else ""
	$lab2.text = list[19] if list.size() >= 20 else ""